set(KUGARU_SRCS
    Frustum.cpp
    GameDraw.cpp
    GameInitDispose.cpp
    GameTick.cpp
    Globals.cpp
    Lights.cpp
    Models.cpp
    Objects.cpp
    pack.c
    pack_private.c
    Person.cpp
    private.c
    Quaternions.cpp
    Random.c
    Skeleton.cpp
    Skybox.cpp
    Sprites.cpp
    Terrain.cpp
    Text.cpp
    TGALoader.cpp
    unpack.c
    unpack_private.c
    Weapons.cpp
    OpenGL_Windows.cpp
    openal_wrapper.cpp
    WinInput.cpp
    MacCompatibility.cpp
)

set(KUGARU_H
    Constants.h
    Frustum.h
    Game.h
    Lights.h
    LinkedList.h
    Models.h
    Objects.h
    Person.h
    PhysicsMath.h
    Pointer.h
    Quaternions.h
    Random.h
    Skeleton.h
    Skybox.h
    Sprites.h
    TGALoader.h
    Terrain.h
    Text.h
    Weapons.h
    WinInput.h
    alstubs.h
    binio.h
    openal_wrapper.h
    gamegl.h
    glstubs.h
    mmgr.h
    nommgr.h
    pack_private.h
    private.h
    unpack_private.h
    MacCompatibility.h
)

add_executable(kugaru ${KUGARU_SRCS} ${KUGARU_H})
target_link_libraries(kugaru ${KUGARU_LIBS})
